	
	header file changes
		* include/vgcp.h: added the enPassantRights array to the position structure

	EDIT 2021-02-26: fixed sentence

2021-02-26	version 00-000F
	Removed the _NO_PERSPECTIVE_CHANGE option and removed support for changing perspective, removed unnecessary delays

	source file changes
		* src/draw.c (drawBoard): removed support for changing perspective

	header file changes
		* include/config.h: removed the _NO_PERSPECTIVE_CHANGE option

2021-02-28	version 00-0010
	Implemented command-line arguments: -v (for version) and -h (for help)

	source file changes
		* src/main.c (main): added command-line argument parsing,
			removed version printing at the start of execution
		* src/util.c: added two new functions: usage and help

	header file changes
		* include/vgcp.h: updated prototypes

2021-03-16	version 00-0011
	WARNING: All features added in this version are extremely unreliable!
	Implemented a "demo" chess protocol that enables "3rd party" programs to make moves as a player. In the future this will be used for playing against AI.
	This whole chess protocol implementation will be fully rewritten (hopefully in the next update).

	source file changes:
		* added a new file that contains all socket/communication/connection related things (src/connection.c)
			This file contains the implementation of the chess protocol (which is my own)
		* src/main.c: implemented the chess protocol, added a new command line argument to specify the port in which black is playing
			(if this argument isn't used then the game continues normally)

	header file changes
		* include/vgcp.h: added the server and msg structures, updated the prototypes.

	PS: if you were wondering about why this hasn't been updated for a while here's the reason: 
	I haven't really been able to work on this project for a long time mostly due to school getting really intense and generally distance school starting (yet again).