@@ -12,5 +12,6 @@
 
 //#define _INSTALL
 //#define _DEBUG
+//#define _SOCKET_DEBUG
 
 #endif
